wrapped image with div to avoid overflow

--- a/src/styles/BarangSaya.css
+++ b/src/styles/BarangSaya.css
@@ -50,15 +50,21 @@
   .Barang-saya_item__body {
     padding: 20px;
     display: flex;
-    flex: 1;
   }
   
   .Barang-saya_item__body-image {
-    width: 50%;
+    flex: 1;
+    border-radius: 10px;
+  }
+
+  .Barang-saya_item__body-image img {
+    max-width: 100%;
+    max-height: 200px;
     border-radius: 10px;
   }
 
   .Barang-saya_itemful{
+    flex: 1;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
